Added version info to web app